mType/tests/testFiles/nameSpace/error/finalVariableModification.mt
namespace math {
    final int pi = 3;
}

math::pi = 3.14; // This should throw an error
print(math::pi);